@@ -327,8 +327,12 @@ $messages = array(
 'tog-highlightbroken'         => 'Links auf nicht vorhandene Seiten hervorheben <a href="" class="new">Beispiel</a> (Alternative: wie dieser<a href="" class="internal">?</a>)',
 'tog-justify'                 => 'Text als Blocksatz',
 'tog-hideminor'               => 'Kleine Änderungen ausblenden',
+'tog-rc_hidebots'             => 'Änderungen der Bots ausblenden',
+'tog-newpageshidebots'        => 'Änderungen der Bots auf der Liste „Neue Seiten“ verbergen',
 'tog-hidepatrolled'           => 'Kontrollierte Änderungen in den „Letzten Änderungen“ ausblenden',
 'tog-newpageshidepatrolled'   => 'Kontrollierte Seiten auf der Liste „Neue Seiten“ verbergen',
+'tog-rc_hideown'              => 'Eigene Änderungen in den „Letzten Änderungen“ ausblenden',
+'tog-newpageshideown'         => 'Eigene Änderungen in der Liste „Neue Seiten“ verbergen',
 'tog-extendwatchlist'         => 'Erweiterte Beobachtungsliste zur Anzeige aller Änderungen',
 'tog-usenewrc'                => 'Erweiterte Darstellung (benötigt JavaScript)',
 'tog-numberheadings'          => 'Überschriften automatisch nummerieren',
